@@ -1,3 +1,14 @@
+2006-06-12  Johan Dahlin  <jdahlin@async.com.br>
+
+	* examples/list/tree.py:
+	Add a new example
+	
+	* kiwi/accessor.py:
+	Fix a bug when specifying a default value
+
+	* kiwi/ui/objectlist.py:
+	Add ObjectTree
+
 2006-06-12  Ronaldo Maia  <romaia@async.com.br>
 	
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
